[tool.poetry]
name = "diabetes-prediction-api"
version = "1.0.0"
description = "Clinical Diabetes Prediction API"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
gunicorn = "^20.1.0"
numpy = "^1.24.3"
tensorflow = "^2.12.0"
keras = "^2.12.0"
joblib = "^1.3.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"